--- a/Episode 3/index.html
+++ b/Episode 3/index.html
@@ -6,9 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- <img src="logo.jpg" alt="test"> -->
     <div id="root">
         <h1>not rendered</h1>
     </div>
-    <script type="module" src="App.js"></script>
+    <script type="module" src="assess.js"></script>
 </body>
 </html>
